chore: add swagger
